--- a/01-sample.Rmd
+++ b/01-sample.Rmd
@@ -21,8 +21,6 @@ knitr::include_graphics("docs/images/height_distribution.png")
 ```
 <p align="center"> https://ourworldindata.org/human-height </p>
 
-
-
 **Генеральная совокупность** -- множество (или совокупность) всех изучаемых объектов в рамках определенного исследовательского вопроса.
 
 **Выборка** или **выборочная совокупность** -- часть генеральной совокупности, отобранная для изучения определенного исследовательского вопроса.
@@ -30,6 +28,14 @@ knitr::include_graphics("docs/images/height_distribution.png")
 Когда мы говорим о генеральной совокупности, мы говорим о ее **параметрах**, например, средний рост людей, обозначим его **X**. Мы не можем посчитать его напрямую, поэтому нам приходится прибегать к **выборочным оценкам**, которые часто обозначются той же буквой, что и параметр генеральной совокупности, только "с крышечкой" или "с чертой" **X̅** -- выборочное среднее, средний рост людей на конкретной выборке.
 
 Итак, когда мы хотим сделать вывод о всех людях из генеральной совокупности -- мы проводим исследование на небольшой выборке (в зависимости от метоода исследования необходимый размер выборки может быть от 10 до 1000 чловек) и оцениваем исследуемый параметр генеральной совокупности по выборочным оценкам. 
+
+Чтобы не запутаться, о чем речь, ключевые популяционные и выборочные оценки обозначают по-разному:
+
+|                                   | Генеральная совокупность | Выборка |
+|:---------------------------------:|:------------------------:|:-------:|
+| Среднее (математическое ожидание) |         $\mu$            |M, $\overline X$|
+|       Стандартное отклонение      |          $\sigma$        |   s, sd |
+
 
 ## Репрезентативность выборки
 
@@ -46,8 +52,18 @@ knitr::include_graphics("docs/images/height_distribution.png")
 
 *  Простая случайная выборка (simple random sample)
 *  Систематическая выборка (systematic sample)
-*  Кластерная выборка (cluster sample)
 *  Стратифицированная выборка (stratified sample)
+*  Кластерная выборка (cluster sample)
+
+
+**Простая случайная выборка** набирается из большого количества случайным образом -- все элементы генеральной совокупности имеют равные шансы попасть в выборку.
+
+**Систематическая выборка** имитирует случайный выбор и обычно используется социологами в полевых исследованиях, когда задается определенный шаг в выьборе людей: например, каждый 5-й или 10-й человек.
+
+**Стратифицированная выборка** нужна, если на исследуемый нами признак может повлиять какой-то параметр, который распределен в генеральной совокупности неравномерно: например, мы исследуем уровень удовлетворенности жизнью, но при этом знаем, что на него влияет уровень дохода -- и нам нужно обеспечить эквивалентное распределение уровня дохода в выборке. Далее уже из этих страт по доходу испытуемые выбираются случайно.
+
+**Кластерная выборка** включает в себя целые отдельные кластеры, без случайного выбора в них: например, мы исследуем школьников, и вместо того, чтобы выбирать их случайно, включим в выборку несколько определенных школ (кластеров)
+
 
 ## Зависимые и независимые выборки {#dependent_samples}
 
@@ -65,7 +81,7 @@ knitr::include_graphics("docs/images/samples.png")
 
 **Кейс**
 
-> Некий Никита провел исследование, где они изучал взаимосвязь возраста, преподавательского стажа и профессионального выгорания преподавателей в университетах. Для этого он выбрал несколько университетвов: МГУ, Высшая школа экономики и РАНХиГС. Никита нашел по 10 преподавателей департаметов психологии из каждого вуза в социальной сети ВКонтакте и предлагал им заполнить опросник выгорания Маслач (Maslach Burnout Inventory, MBI). На основании обработанных данных Никита сделал следующие выводы: 1) в России чаще выгорают преподаватели более молодого возраста; 2) чаще выгорают преподаватели с меньшим преподавательским стажем; 3) преподаватели МГУ в целом выгорают меньше, чем преподаватели в ВШЭ. Какие методы набора выборки использовал Никита? Верны ли выводы?
+>  Исследователь Никита изучал взаимосвязь возраста, преподавательского стажа и профессионального выгорания преподавателей в университетах. Для этого он выбрал несколько университетов: МГУ, Высшая школа экономики и РАНХиГС. Никита нашел по 10 преподавателей департаметов психологии из каждого вуза в социальной сети ВКонтакте и предлагал им заполнить опросник выгорания Маслач (Maslach Burnout Inventory, MBI). На основании обработанных данных Никита сделал следующие выводы: 1) в России чаще выгорают преподаватели более молодого возраста; 2) чаще выгорают преподаватели с меньшим преподавательским стажем; 3) преподаватели МГУ в целом выгорают меньше, чем преподаватели в ВШЭ. Какие методы набора выборки использовал Никита? Верны ли выводы?
 
 ```{r echo= FALSE, fig.align = 'center', out.width="60%"}
 knitr::include_graphics("docs/images/2022-09-13 09.30.13.jpg")
