--- a/02-scales.Rmd
+++ b/02-scales.Rmd
@@ -4,7 +4,7 @@
 
 Что значит измерить что-либо? Это значит, **привести в соответствие исследуемому признаку какое-либо значение на шкале**.
 
-Что может примером признака? Что угодно, что нам нужно измерить в рамках исследования: количество кружек кофе в день, уровень концентрации, количество ошибок, время реакции, степень выгорания, количество выполненных задач, уровень нейротизма, рейтинг студента, количество детей в семье, температура и т.д.
+Что может быть примером признака? Что угодно, что нам нужно измерить в рамках исследования: количество кружек кофе в день, уровень концентрации, количество ошибок, время реакции, степень выгорания, количество выполненных задач, уровень нейротизма, рейтинг студента, количество детей в семье, температура и т.д.
 
 **Признак**, который мы исследуем, по-другому называется **переменной**. С этим понятием мы будем сталкиваться постоянно в анализе данных. По сути, если мы посмотрим на табличку наблюдений, то любой столбец с измерениям -- это переменная. По строкам располагаются наблюдения, например, каждый новый человек из нашей выборки. Значение в  определенной колонке -- это **значение** переменной данного наблюдения.
 
