--- a/index.Rmd
+++ b/index.Rmd
@@ -111,4 +111,4 @@ knitr::include_graphics("docs/images/klark-95cl.jpg")
 knitr::include_graphics("docs/images/stats.png")
 ```
 
-После того, как мы поисследовали данные и признали их адекватными и пригодными для работы, мы можем использовать их для выводов относительно выдвинутых предположений. Что там все-таки прооисходит с кофеином, он увеличил способность концентрироваться и сохранять внимание, или, наоборот, ухудшил? А с введением нового способа коммуникации между сотрудниками, стали ли они после этого делать больше задач, или все осталось на прежнем уровне? Чтобы ответить на эти вопросы, нам нужно *сравнить данные и оценить различия между ними*. Этим занимается другой раздел статистики -- **статистикой вывода (inferential stats)**. Здесь уже мы не занимаемся описанием данных, а непосредственно делаем выводы их них, о связи переменных между собой или о влиянии одной переменной на другую. Например, если мы правильно провели статистический анализ *(а это не такая тривиальная задача -- спойлер, большинство выводов, которые делаются на основании данных, ложные)*, то сможем заключить, что пить много кофе может, наоборот, негативно влиять на внимание, а использовать новый инструмент, где писать сообщения просто, быстро, и можно добавлять разные эмодзи -- способствует увеличению сделанных сотрудниками задач. И можем даже предсказать, насколько больше задач будут делаться в таком случае.
+После того, как мы поисследовали данные и признали их адекватными и пригодными для работы, мы можем использовать их для выводов относительно выдвинутых предположений. Что там все-таки прооисходит с кофеином, он увеличил способность концентрироваться и сохранять внимание, или, наоборот, ухудшил? А с введением нового способа коммуникации между сотрудниками, стали ли они после этого делать больше задач, или все осталось на прежнем уровне? Чтобы ответить на эти вопросы, нам нужно *сравнить данные и оценить различия между ними* и *сделать из этого выводы относительно всех людей, для кого это релевантн (генеральной совокупности)*. Этим занимается другой раздел статистики -- **статистикой вывода (inferential stats)**. Здесь уже мы не занимаемся описанием данных, а непосредственно делаем выводы из них, о связи переменных между собой или о влиянии одной переменной на другую во всей популяции. Например, если мы правильно провели статистический анализ *(а это не такая тривиальная задача -- спойлер, большинство выводов, которые делаются на основании данных, ложные)*, то сможем заключить, что пить много кофе может, наоборот, негативно влиять на внимание, а использовать новый инструмент, где писать сообщения просто, быстро, и можно добавлять разные эмодзи -- способствует увеличению сделанных сотрудниками задач. И можем даже предсказать, насколько больше задач будут делаться в таком случае.
