--- a/03-probability.Rmd
+++ b/03-probability.Rmd
@@ -72,26 +72,6 @@ t(rolls)
 
 ## Столбчатая диаграмма
 
-Построим таблицу частот выпадения каждой грани
-
-```{r}
-table(rolls)
-```
-
-```{r}
-prop.table(table(rolls))
-```
-
-Можем наглядно посмотреть это на **столбчатой (столбиковой) диаграмме** -- графике, отображающем частоты встречаемости событий дискретной переменной.
-
-```{r}
-rolls %>% 
-  ggplot(aes(x=Red)) +
-  geom_histogram(bins = 6, binwidth = 1) +
-  theme_minimal()
-```
-
-**Гистограмма** -- это частный случай **столбчатой (или столбиковой) диаграммы**. Она отличается от столбчатой диаграммы тем, что, в отличие от нее, мы сами можем регулировать ширину столбика по оси $x$, задавать, сколько значений переменной х в него войдет, и высотка столбика будут пересчитана в зависимости от этого количества. В столбиковой диаграмме мы так сделать не можем, по оси $x$ всегда только одно значение, каждый столбик соотносится с конкретным значением переменной.
 
 ## Непрерывные СВ и геометрическое определение вероятности
 
@@ -175,6 +155,29 @@ as_tibble(line_sample_10000) %>%
   geom_density() +
   theme_minimal()
 ```
+**Гистограмма** -- это частный случай **столбчатой (или столбиковой) диаграммы**. Она отличается от столбчатой диаграммы тем, что, в отличие от нее, мы сами можем регулировать ширину столбика по оси $x$, задавать, сколько значений переменной х в него войдет, и высотка столбика будут пересчитана в зависимости от этого количества. В столбиковой диаграмме мы так сделать не можем, по оси $x$ всегда только одно значение, каждый столбик соотносится с конкретным значением переменной.
+
+Построим таблицу частот выпадения каждой грани
+
+```{r}
+table(rolls)
+```
+
+```{r}
+prop.table(table(rolls))
+```
+
+Можем наглядно посмотреть это на **гистограмме** -- графике, отображающем частоты встречаемости событий дискретной переменной.
+
+```{r}
+rolls %>% 
+  ggplot(aes(x=Red)) +
+  geom_histogram(bins = 6, binwidth = 1) +
+  theme_minimal()
+```
+
+
+
 
 > Итак, запомнили, что мы рассматриваем признаки (переменные) как случайные величины, они могут быть дисркетные и непрерывные, и их вероятности описываются определенными законами распределения.
 
