--- a/03-probability.Rmd
+++ b/03-probability.Rmd
@@ -16,7 +16,7 @@
 
 Это понятие нужно нам для того, чтобы мы могли считать **вероятности** наступления определенных **событий**, то есть наших измеренных переменных. Дело в том, что про вероятности случайных величин нам плюс-минус понятно и просто, а вот если величина перестает быть случайной, расчет вероятности становится сложнее. И мы пока рассматриваем только случайные величины.
 
-
+(Более подробный экскурс в случайный величины и теорию вероятностей можно получить в отличном учебнике Mathprofi http://mathprofi.ru/sluchainaya_velichina.html)
 ## Вероятность
 
 ```{r, eval=TRUE, echo = FALSE, message = FALSE}
@@ -32,12 +32,13 @@ library(tidyverse)
 Здесь начинается неожиданная развилка: в зависимости от того, как мы понимаем вероятность, приравниваем ли ее к частоте, статистика делится на **байесовскую (bayesian)** и **частотную (фреквинтистскую, frequentist)**. Статистика, в которой мы заменяем вероятности частотами, а не высчитываем вероятность по сложной формуле, и в которой мы будем работать -- частотная (https://en.wikipedia.org/wiki/Frequentist_inference). То есть говоря о вероятности, мы будем понимать ее исключительно так же, как и частоту, забываем про существование условной вероятности, формулу полной вероятности и других сложных концепций: если бы мы провели много раз одно и то же исследование, скажем, тысячу, и посмотрели, сколько раз в этом исследовании выпадает результат, который нас интересует, мы бы сказали, что вероятность наступления этого события -- это сколько раз оно выпадало из тысячи. И будем руководствоваться только этим смыслом.
 
 Есть разные определения, в рамках статистики различают статистическое и геометрическое определение вероятностей. Можно углубиться на http://mathprofi.ru/sluchainaya_velichina.html. Разные определения вероятности используются в зависимости от того, с какими случайными величинами (СВ) мы работаем, различают два их типа: 
+
 * **дискретные СВ**
 * **непрерывные СВ**
 
 ## Дискретные СВ и статистическое определение вероятности
 
-Самая часто используемая в теории вероятностей модель -- бросание обычного шестигранного игрального кубика. Кубик отличает то, что всего возможно наступление 6 событий (не будем рассматривать, что кубик смещенный или какой-то неправильный). То есть **область допустимых значений** или **область определения** для случайной величины "бросок кубика" это 6 значений: $ D \in \{1, 2, 3, 4, 5, 6\}$
+Самая часто используемая в теории вероятностей модель -- бросание обычного шестигранного игрального кубика. Кубик отличает то, что всего возможно наступление 6 событий (не будем рассматривать, что кубик смещенный или какой-то неправильный). То есть **область допустимых значений** или **область определения** для случайной величины "бросок кубика" это 6 значений: $D \in \{1, 2, 3, 4, 5, 6\}$
 
 Величина, область значений которой состоит из конечного числа натуральных чисел (1; 2; 3; 4; 5...), называется **дискретной**.
 
@@ -65,12 +66,45 @@ $P(K_{1})$ + $P(K_{2})$ + $P(K_{3})$ + $P(K_{4})$ + $P(K_{5})$ + $P(K_{6})$ = $1
 Единичные события нас мало интересуют (предмет изучения теории вероятностей -- массовые события), поэтому давайте представим, что мы бросили кубик несколько раз. Например, 20.
 
 ```{r}
+library(tidyverse)
 library(TeachingDemos)
 rolls <- dice(20,1)
 t(rolls)
 ```
 
-## Столбчатая диаграмма
+## Столбчатая диаграмма и гистограмма
+
+
+Построим таблицу частот выпадения каждой грани
+
+```{r}
+table(rolls)
+```
+
+```{r}
+prop.table(table(rolls))
+```
+
+Можем наглядно посмотреть это на **столбчатой (или столбиковой) диаграмме** -- графике, отображающем частоты встречаемости событий дискретной переменной.
+
+
+```{r}
+rolls %>% 
+  ggplot(aes(x=Red)) +
+  geom_bar(bins = 6, binwidth = 1) +
+  theme_minimal()
+```
+
+Сразу введем понятие **гистограммы** -- это похожий на столбчатую диаграмму график, но, в отличие от столбчатой диаграммы, он используется исключительно для количественных данных, и мы можем регулировать ширину столбика по оси $x$, задавать, сколько значений переменной х в него войдет (например,не только грань 1, но и грани 1 + 2), и высотка столбика будут пересчитана в зависимости от этого количества. В столбиковой диаграмме мы так сделать не можем, по оси $x$ всегда только одно значение, каждый столбик соотносится с конкретным значением переменной.
+
+```{r}
+rolls %>% 
+  ggplot(aes(x=Red)) +
+  geom_histogram(bins = 6, binwidth = 1) +
+  theme_minimal()
+```
+
+
 
 
 ## Непрерывные СВ и геометрическое определение вероятности
@@ -155,27 +189,6 @@ as_tibble(line_sample_10000) %>%
   geom_density() +
   theme_minimal()
 ```
-**Гистограмма** -- это частный случай **столбчатой (или столбиковой) диаграммы**. Она отличается от столбчатой диаграммы тем, что, в отличие от нее, мы сами можем регулировать ширину столбика по оси $x$, задавать, сколько значений переменной х в него войдет, и высотка столбика будут пересчитана в зависимости от этого количества. В столбиковой диаграмме мы так сделать не можем, по оси $x$ всегда только одно значение, каждый столбик соотносится с конкретным значением переменной.
-
-Построим таблицу частот выпадения каждой грани
-
-```{r}
-table(rolls)
-```
-
-```{r}
-prop.table(table(rolls))
-```
-
-Можем наглядно посмотреть это на **гистограмме** -- графике, отображающем частоты встречаемости событий дискретной переменной.
-
-```{r}
-rolls %>% 
-  ggplot(aes(x=Red)) +
-  geom_histogram(bins = 6, binwidth = 1) +
-  theme_minimal()
-```
-
 
 
 
