--- a/03-probability.Rmd
+++ b/03-probability.Rmd
@@ -72,7 +72,7 @@ rolls <- dice(20,1)
 t(rolls)
 ```
 
-## Столбчатая диаграмма и гистограмма
+## Столбчатая диаграмма и отличия от гистограммы
 
 
 Построим таблицу частот выпадения каждой грани
@@ -165,7 +165,11 @@ as_tibble(line_sample) %>%
   geom_density() +
   theme_minimal()
 ```
-Он тоже показывает так, будто какие-то значения более частые, какие-то менее -- но ситуация уже гораздо лучше. Здесь мы сгенерировали 10 значений, а если нам вдруг нужно визуализировать все возможные значения из отрезка [0;1], а х бесконечность? Тогда гистограмма вообще потеряет всякий смысл, так как разбивает все значения на столбики из конечных интервалов, а вот непрерывная линию будет подходящей -- в непрерывной линии бесконечное число значений! То есть выходит следующая логика: для визуализации дискретных величин обычно используют гистограмму, для визуализации непрерывных -- график плотности вероятности.
+Он тоже показывает так, будто какие-то значения более частые, какие-то менее -- но ситуация уже гораздо лучше. Здесь мы сгенерировали 10 значений, а если нам вдруг нужно визуализировать все возможные значения из отрезка [0;1], а х бесконечность? Тогда гистограмма вообще потеряет всякий смысл, так как разбивает все значения на столбики из конечных интервалов, а вот непрерывная линию будет подходящей -- в непрерывной линии бесконечное число значений! То есть выходит следующая логика: 
+
+* для визуализации категориальных данных (номинативных и порядковых -- количественных дискретных) используют столбчатую диаграмму (например, количество выбравших в опроснике ответ "1", "2", "3"; средняя температура по месяцам)
+* для визуализации непрерывных величин на маленьком диапазоне, где хорошо выделяются интервалы, иногда для визуализации количественных дискретных (порядковых) данных -- используют гистограмму;
+* для визуализации непрерывных величин (шкала отношений, относительная шкала) -- график плотности вероятности.
 
 Почему **плотности вероятности**, а не самой вероятности? Потому что как мы вывели выше, если бы мы считали точно именно вероятность, она бы стремилась к нулю. А засчет того, что это именно плотность, буквально, "тут побольше значений", "тут поменьше значений" -- получается осмысленный график. То есть, простыми словами, плотность вероятности -- характер распределения вероятностей в самом значении и его окрестности. Если в интервале [0.25;0.35] оказалось (чисто случайно) мало значений, а в интервале [0.58;0.65] оказалось побольше -- то на графике плотности вероятности мы увидим различия в вероятности для этих интервалов, хотя вероятность встретить каждое конкретное очень точно заданное число (например, 0.4857856) стремится к 0.
 Мы не будем рассматривать математически смысл плотности вероятности, но функция плотности вероятности является производной от функции самой вероятности.
