--- a/03-probability.Rmd
+++ b/03-probability.Rmd
@@ -73,7 +73,7 @@ rolls <- dice(20,1)
 t(rolls)
 ```
 
-## Столбчатая диаграмма и отличия от гистограммы
+## Столбчатая диаграмма (barplot) {#barplot}
 
 
 Построим таблицу частот выпадения каждой грани
@@ -95,16 +95,6 @@ rolls %>%
   geom_bar(bins = 6, binwidth = 1) +
   theme_minimal()
 ```
-
-Сразу введем понятие **гистограммы** -- это похожий на столбчатую диаграмму график, но, в отличие от столбчатой диаграммы, он используется исключительно для количественных данных, и мы можем регулировать ширину столбика по оси $x$, задавать, сколько значений переменной х в него войдет (например,не только грань 1, но и грани 1 + 2), и высотка столбика будут пересчитана в зависимости от этого количества. В столбиковой диаграмме мы так сделать не можем, по оси $x$ всегда только одно значение, каждый столбик соотносится с конкретным значением переменной.
-
-```{r}
-rolls %>% 
-  ggplot(aes(x=Red)) +
-  geom_histogram(bins = 6, binwidth = 1) +
-  theme_minimal()
-```
-
 
 
 
@@ -134,7 +124,7 @@ $P(L_{.4857856}) = \frac{1}{множество всех точек на отре
 
 Получается, что мы не можем посчитать математически (статистически), и приходится прибегать к геометрическому определению.
 
-## График плотности вероятности и гистограмма
+## Гистограмма (histogram) {#histogram} 
 
 Построим таблицу и график частот для значений из отрезка.
 Для это сгенерируем набор из 10 случайных чисел в диапазоне [0;1].
@@ -148,7 +138,12 @@ table(line_sample)
 
 prop.table(table(line_sample))
 ```
-Видим, что все значения встретились только один раз. Построим график. Можем построить гистограмму для этих значений:
+Видим, что все значения встретились только один раз. Построим график. Можем построить гистограмму для этих значений.
+
+**Гистограммы** -- это похожий на столбчатую диаграмму график, но, в отличие от столбчатой диаграммы, ширина столбца соответсвует не какому-то определенному значению переменной, а диапазону. Гистограмма используется исключительно для количественных данных или для порядковых данных с большим количеством градаций (например, данные от опросника, где респонденты отвечали по шкале от 1 до 7). 
+Почему только количественные или порядковые: так как в каждый столбик входит целый диапазон, нам важно уместь расположить значения переменной на оси $x$ слева направо в единственно верном порядке -- что невозможно с номинативными данными. В гистограмме мы сами можем регулировать ширину столбика по оси $x$, то есть задавать, сколько значений переменной $x$ войдет в столбец. Если мы изменили диапазон по оси $x$, то высота столбика тоже будут пересчитана в соответствии с частотой для этого диапазона. В столбчатой диаграмме мы так сделать не можем, по оси $x$ всегда только одно значение, каждый столбик соотносится с конкретным значением переменной.
+
+
 
 ```{r}
 as_tibble(line_sample) %>% 
@@ -156,21 +151,37 @@ as_tibble(line_sample) %>%
   geom_histogram(bins = 10) +
   theme_minimal()
 ```
+Для кубика мы тоже можем построить гистограмму, потому что этот как раз пример порядковой шкалы с довольно большим количеством значений, но вернее для визуализации частоты выпадения гранец кубика все-тки подойдет столбчатая диаграмма. Если мы все-таки хотим построить гистограмму, она будет выглядеть так. Здесь каждому столбику соответствует одно значение грани
 
-Получается довольно странно: мы видели, что частота встречаемости разных значений -- всегда была единичка, а на гистограмме кажется по-другому. Так происходит, потому что мы взяли только 10 очень конкретных крошечных значений из непрерывной величины, и нам попались какие-то значения -- рядом друг с другом, и столбики для их частот "слиплись" в один большой столбик, и частота получилась не 1, а 2. А какие-то значения попались далеко друг от друга, поэтому их столбики слиплись не друг с другом, а с более близкими к ним столбиками, и на месте частоты для этого значения образовалась дырка.
+```{r}
+rolls %>% 
+  ggplot(aes(x=Red)) +
+  geom_histogram(bins = 6, binwidth = 1) +
+  theme_minimal()
+```
+
+А здесь -- каждый столбец соответствует двум значениям граней (1-2, 3-4, 5-6)
+
+```{r}
+rolls %>% 
+  ggplot(aes(x=Red)) +
+  geom_histogram(bins = 6, binwidth = 2) +
+  theme_minimal()
+```
+
+Возвращаясь к графику с числами из диапазона от 0 до 1: вышло довольно странно -- мы видели, что частота встречаемости разных значений -- всегда была единичка, а на гистограмме кажется по-другому. Так происходит, потому что мы взяли только 10 очень конкретных крошечных значений из непрерывной величины, и нам попались какие-то значения -- рядом друг с другом, и столбики для их частот "слиплись" в один большой столбик, и частота получилась не 1, а 2. А какие-то значения попались далеко друг от друга, поэтому их столбики слиплись не друг с другом, а с более близкими к ним столбиками, и на месте частоты для этого значения образовалась дырка.
 
 Такой график для непрерывной величины не очень верный: чтобы стобики не "слипались" и не обманывали нас визуально, будто где-то в значениях есть дыра, для непрерывных величин мы будем использовать другой график -- **график плотности вероятности (probability density)**
+
+## график плотности вероятности (density plot) {#densityplot} 
+
 ```{r}
 as_tibble(line_sample) %>% 
   ggplot(aes(x=value)) +
   geom_density() +
   theme_minimal()
 ```
-Он тоже показывает так, будто какие-то значения более частые, какие-то менее -- но ситуация уже гораздо лучше. Здесь мы сгенерировали 10 значений, а если нам вдруг нужно визуализировать все возможные значения из отрезка [0;1], а х бесконечность? Тогда гистограмма вообще потеряет всякий смысл, так как разбивает все значения на столбики из конечных интервалов, а вот непрерывная линию будет подходящей -- в непрерывной линии бесконечное число значений! То есть выходит следующая логика: 
-
-* для визуализации категориальных данных (номинативных и порядковых -- количественных дискретных) используют столбчатую диаграмму (например, количество выбравших в опроснике ответ "1", "2", "3"; средняя температура по месяцам)
-* для визуализации непрерывных величин на маленьком диапазоне, где хорошо выделяются интервалы, иногда для визуализации количественных дискретных (порядковых) данных -- используют гистограмму;
-* для визуализации непрерывных величин (шкала отношений, относительная шкала) -- график плотности вероятности.
+Он тоже показывает так, будто какие-то значения более частые, какие-то менее -- но ситуация уже гораздо лучше. Здесь мы сгенерировали 10 значений, а если нам вдруг нужно визуализировать все возможные значения из отрезка [0;1], а х бесконечность? Тогда гистограмма вообще потеряет всякий смысл, так как разбивает все значения на столбики из конечных интервалов, а вот непрерывная линию будет подходящей -- в непрерывной линии бесконечное число значений! 
 
 Почему **плотности вероятности**, а не самой вероятности? Потому что как мы вывели выше, если бы мы считали точно именно вероятность, она бы стремилась к нулю. А засчет того, что это именно плотность, буквально, "тут побольше значений", "тут поменьше значений" -- получается осмысленный график. То есть, простыми словами, плотность вероятности -- характер распределения вероятностей в самом значении и его окрестности. Если в интервале [0.25;0.35] оказалось (чисто случайно) мало значений, а в интервале [0.58;0.65] оказалось побольше -- то на графике плотности вероятности мы увидим различия в вероятности для этих интервалов, хотя вероятность встретить каждое конкретное очень точно заданное число (например, 0.4857856) стремится к 0.
 Мы не будем рассматривать математически смысл плотности вероятности, но функция плотности вероятности является производной от функции самой вероятности.
@@ -195,6 +206,57 @@ as_tibble(line_sample_10000) %>%
   theme_minimal()
 ```
 
+Как выбрать, какой график подходит лучше всего для описания распределения переменной? Для этого нужно сначала ответить на вопрос, в какой шкале закодирвана переменная, что это за данные. И далее можно руководствоваться следующей логикой:
+
+То есть выходит следующая логика: 
+
+* для визуализации *категориальных данных* (номинативная шкала и порядковая с небольшим числом градаций (например, хотим визуализировать количество выбравших в опроснике ответ "1", "2", "3") или не численными градациями вида уровня образования) используют **[столбчатую диаграмму](#barplot)** 
+* для визуализации *количественных* данных на маленьком диапазоне (шкала отношений и относительная шкала, но разделенные на диапазоны), где хорошо выделяются интервалы, и  для визуализации порядковых данных с большим количеством градаций (например, опросник со шкалой от 1 до 7) -- используют **[гистограмму](#histogram)**;
+* для визуализации классических количественных данных (шкала отношений, относительная шкала) -- используется **[график плотности вероятности](#densityplot)**.
+
+Часто можно встретить картинку, где график плотности вероятности наложен на гистограмму -- если данные позволяют нарисовать такую картинку, это хороший вариант получить побольше информации из графика.
+
+```{r echo= FALSE, fig.align = 'center', out.width="100%"}
+knitr::include_graphics("docs/images/000019.png")
+```
+
+```{r, eval=TRUE, echo = FALSE, message = FALSE}
+library(tidyverse)
+library(kableExtra)
+teacher_number <- seq(1,30,1)
+age <-  sample(22:60, size = 30, replace = T)
+exp_years <- sample(1:8, size = 30, replace = T)
+exp_scaled <- ifelse(exp_years >= 1 & exp_years <= 2, "от 1 до 2",
+                     ifelse(exp_years > 2 & exp_years <= 5, "от 3 до 5",
+                            ifelse(exp_years > 5, "больше 5", exp_years)))
+burnout_MBI <- sample(19:70, size = 30, replace = T)
+univer <-  rep(c("MSU", "HSE", "MSU", "RANEPA", "HSE", "RANEPA"),5)
+burnout <- tibble(teacher_number, age, exp_years, exp_scaled, burnout_MBI, univer)
+```
+
+
+На примере данных про выгорание:
+
+```{r}
+kable(burnout)
+```
+
+Для визуализации порядковой переменной Опыта преподавания *exp_scaled*
+```{r}
+burnout %>% 
+  ggplot(aes(x=exp_scaled)) +
+  geom_bar() +
+  theme_minimal()
+```
+
+Для визуализации количественной переменной Возраст *age* (шкала отношений)
+
+```{r}
+burnout %>% 
+  ggplot(aes(x=age)) +
+  geom_density() +
+  theme_minimal()
+```
 
 
 > Итак, запомнили, что мы рассматриваем признаки (переменные) как случайные величины, они могут быть дисркетные и непрерывные, и их вероятности описываются определенными законами распределения.
