--- a/05-decriptives.Rmd
+++ b/05-decriptives.Rmd
@@ -87,7 +87,20 @@ sample_data1
 mean(sample_data1)
 ```
 
-**Медиана (median)** -- это граница, которая делает упорядочненное множество данных пополам. Для того, чтобы посчитать медиану, нам нужно: 1) расставить все имеющиеся значения в порядке возрастания; 2) найти середину: это будет либо значение, соответствующее месту $\frac{n}{2}+1$, если n -- нечетное, либо среднее из двух центральных значений $\frac{1}{2}(X_{n/2}+X_{n+1/2})$, если n -- четное.
+**Свойства среднего**
+
+Полезно помнить о свойствах среднего:
+
+1. Если к каждому значению выборки прибавить (или вычесть) одно и то же число, то среднее так же увеличится (или уменьшится) на это же число: $\bar X_(x_i+c) = \bar X + c$
+
+
+2. Если каждое значение выборки умножить (или разделить) одно и то же число, то среднее так же увеличится (или уменьшится) в это же число раз $\bar X_(x_i \times c) = \bar X \times c$
+
+3. Сумма всех отклонений от среднего равна нулю $\sum_{i=1}^{n}(\bar X - x_i) = 0$
+
+
+**Медиана (median)** -- это граница, которая делает упорядочненное множество данных пополам. Для того, чтобы посчитать медиану, нам нужно: 1) расставить все имеющиеся значения в порядке возрастания; 2) найти середину: это будет либо значение, соответствующее месту $\frac{n}{2}+1$, если n -- нечетное, либо среднее из двух центральных значений $(\frac{1}{2}(X_{n/2}+X_{n+1})/2$, если n -- четное.
+
 ```{r}
 sort(sample_data1)
 median(sample_data1)
@@ -135,11 +148,11 @@ mode <- function(x) {
 
 В примере с оценкой благосостояния мы выяснили, что среднее значение здесь -- плохой выбор для описания этих данных с помощью мер центральной тенденции. Тогда какие меры центральной тенденции выбрать?
 
-Мера ЦТ | Данные и шкала | Особенности | 
---------| ---------------| ----------- | 
-Среднее | Только количественная: шкала отношений или интервальная | распределение симметрично, нет заметных выборосов |
+Мера ЦТ | Данные и шкала | Особенности использования | 
+--------| ---------------| ------------------------- | 
+Среднее | Только количественная: шкала отношений или интервальная | достаточно большая выборка, распределение симметрично, нет заметных выборосов |
 Медиана | Количественная или порядковая: шкала отношений, интервальная или порядковая (ранговая) | можем использовать, когда распределение не симметрично, есть выбросы, не можем использовать для номинативной шкалы |
-Мода | Любая шкала, Номинативная (номинальная), порядковая, количественная (отношений или интервальная) | чаще всего используется там, где не можем производить метрические операции, но не можем посчитать ее для непрерывных величин |
+Мода | Любая шкала, Номинативная (номинальная), порядковая, количественная (отношений или интервальная) | чаще всего используется там, где не можем производить метрические операции, но не можем точно посчитать моду для количественных непрерывных величин |
 
 
 ```{r central_tendency_sampling,include=FALSE}
@@ -166,7 +179,7 @@ colors<-c("Mean"="red4","Median"="blue4","Mode"="green4")
 
 *Где на графиках среднее, медиана и мода?*
 
-```{r central_tendency_symm, echo=FALSE}
+```{r central_tendency_symm, echo=FALSE, warning=FALSE, message=FALSE}
 
 ggplot(NULL, aes(symm)) +
   geom_histogram(aes(y = ..density..), alpha =.5, binwidth = .5) +
@@ -272,14 +285,17 @@ mode(students$Mjob)
 
 ## Квантили, квартили и перцентили 
 
-Мы выяснили, что медиана делит распределение пополам. Это удобно. Например, чтобы оценить, ниже / выше каког значения находится первая или вторая половина данных. 
+Мы выяснили, что медиана делит распределение пополам. Это удобно. Например, чтобы оценить, ниже / выше какого значения находится первая или вторая половина данных. 
 
 Такие вопросы возникают достаточно часто, и не только про половину данных, а про определенные кусочки данных.
-**Квантили** -- общее обозначение для черт, которые делят распределение на определенное число равных по объему данных.
+**Квантили** -- общее обозначение для точек, которые делят распределение на равные по объему данных кусочки -- например, на кусочки по десять процентов.
 
-**Перцентили** -- частные случаи квантилей, которые делят все распределение на 100 равных частей. Таким образом, в каждой части оказывается 1% данных.
+**Децили** -- частные случаи квантилей, 9 точек, которые делят все распределение на 10 равных частей. Таким образом, в каждой части оказывается 10% данных.
+
+**Перцентили** -- частные случаи квантилей, 99 точек, которые делят все распределение на 100 равных частей. Таким образом, в каждой части оказывается 1% данных.
 
 **Квартили** -- частные случаи квантилей, делят все распределение на четыре части, по 25% данных. То есть, всего квартителей 4, и они обозначаются буквой Q: Q1, Q2, Q3, Q4.
+
 
 Получается, что:
 
@@ -294,7 +310,7 @@ knitr::include_graphics("docs/images/quartiles.png")
 </p>
 
 
-## Меры вариативности {#varm} 
+## Меры вариативности (изменчивости) {#varm} 
 
 Вариативность -- изменичвость значений, как сильно разнятся данные от наблюдения к наблюдению.
 
@@ -322,7 +338,13 @@ rnorm_three %>%
   scale_x_continuous(breaks = -5:15) +
   theme_minimal()
 ```
+Эти распределения очень разные, но ~~все-таки они вместе~~ если посмотреть на их средние -- они будут одинаковыми
 
+<p align="center"> 
+```{r fig.align = 'center', out.width="100%"}
+knitr::include_graphics("docs/images/distributions_with_the_same_means_mean-1.png")
+```
+</p>
 ### Размах, стандартное отклонение и дисперсия
 
 **Размах (range)** -- разница между максимальным и минимальным значением в выборке, $x_{max}-x_{min}$
@@ -331,10 +353,29 @@ rnorm_three %>%
 sample_data1
 range(sample_data1)
 ```
+Здесь показаны минимальное и максимальные значения, чтобы посчитать размах, нужно из максимальнго вычесть минимальное. И как можно понять, размах очень чувствителен к выбросам -- если добавить значение "3000" к этой выборке, размах изменится кардинально.
+
+Мы уже слышали о стандартном отклонении (как минимум, оно фигурирует в формуле нормального распределения). Теперь познакомимся с ним ближе и попробуем его вывести.
 
 **Стандартное отклонение, оно же среднеквадратичное отклонение (standard deviation)** -- это среднее отклонение наблюдений от их среднего означения.
 
-Свойства дисперсии.
+Попробуем его посчитать:
+
+**Дисперсия**
+
+
+**Свойства дисперсии и стандартного отклонения**
+
+Так же, как и для среднего, для дисперсии / стандартного отклонения есть важные свойства
+
+1. Если к каждому значению выборки прибавить (или вычесть) одно и то же число (константу), то дисперсия и стандартное отлокнение не изменятся
+
+
+
+
+2. Если каждое значение выборки умножить (или разделить) одно и то же число, то среднее так же увеличится (или уменьшится) в это же число раз $\bar X_(x_i \times c) = \bar X \times c$
+
+3. Сумма всех отклонений от среднего равна нулю $\sum_{i=1}^{n}(\bar X - x_i) = 0$
 
 На примере с данными студентов:
 
