--- a/05-decriptives.Rmd
+++ b/05-decriptives.Rmd
@@ -368,14 +368,12 @@ range(sample_data1)
 
 Так же, как и для среднего, для дисперсии / стандартного отклонения есть важные свойства
 
-1. Если к каждому значению выборки прибавить (или вычесть) одно и то же число (константу), то дисперсия и стандартное отлокнение не изменятся
+1. Если к каждому значению выборки прибавить (или вычесть) одно и то же число (константу) $c$, то дисперсия и стандартное отлокнение не изменятся: $D_(x_i+c) = D$, $sd_(x_i+c) = sd$
 
+2. Если каждое значение выборки умножить (или разделить) одно и то же число $c$, то дисперсия увеличится (уменьшится) в $c^2$ раз $D_(x_i \times c) = D \times c^2$, а реднее увеличится (или уменьшится) в  $c$ раз: $sd_(x_i \times c) = sd \times c$
 
+3. Если значения двух выборок не отличаются друг от друга, то у них равная дисперсия и стандартное отклонение
 
-
-2. Если каждое значение выборки умножить (или разделить) одно и то же число, то среднее так же увеличится (или уменьшится) в это же число раз $\bar X_(x_i \times c) = \bar X \times c$
-
-3. Сумма всех отклонений от среднего равна нулю $\sum_{i=1}^{n}(\bar X - x_i) = 0$
 
 На примере с данными студентов:
 
